--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>second repo</title>
 </head>
 <body>
+    <h1>wow i can code</h1>
+    <h2>this is h2</h2>
+    <h3>Lorem ipsum</h3>
     
 </body>
 </html>
