--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>second repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>wow i can code</h1>
-    <h2>this is h2</h2>
-    <h3>Lorem ipsum</h3>
-    <h4>ttt</h4>
+    <h1 class="x">wow i can code</h1>
+    <h2 class="x">this is h2</h2>
+    <h3 class="x">Lorem ipsum</h3>
+    <h4 class="x
+    ">ttt</h4>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis libero corporis repellendus mollitia rem rerum impedit similique nisi placeat sequi consectetur ut, perspiciatis itaque aliquam magnam dolorem quo dolores fugit?</p>
     
 </body>
 </html>
