--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
     <h3 class="x">Lorem ipsum</h3>
     <h4 class="x
     ">ttt</h4>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis libero corporis repellendus mollitia rem rerum impedit similique nisi placeat sequi consectetur ut, perspiciatis itaque aliquam magnam dolorem quo dolores fugit?</p>
+    <p id="a">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis libero corporis repellendus mollitia rem rerum impedit similique nisi placeat sequi consectetur ut, perspiciatis itaque aliquam magnam dolorem quo dolores fugit?</p>
+    <div>
+        <p>this is a beautiful ocean</p>
+        <img src="ocean.jpg" alt="this is a photo of an oean">
+
+    </div>
     
 </body>
 </html>
